--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply text-xl bg-red-500 font-bold px-3 py-2 select-none touch-none
+    }
+}
