Feat: remove button element

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,6 +5,6 @@
 
 @layer components {
     .btn {
-        @apply text-xl bg-red-500 font-bold px-3 py-2 select-none touch-none
+        @apply text-xl bg-light font-bold px-3 py-2 select-none touch-none
     }
 }
