--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,6 +5,6 @@
 
 @layer components {
     .btn {
-        @apply text-xl text-mid bg-accent font-bold px-3 py-2 select-none touch-none
+        @apply text-xl text-mid bg-accent hover:bg-accent-light font-bold px-3 py-2 select-none touch-none
     }
 }
