--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,6 +5,15 @@
 
 @layer components {
     .btn {
-        @apply text-xl inline-block box-border h-[44px] text-white bg-accent-dark hover:bg-accent font-bold px-3 py-2 select-none touch-none
+        /* @apply text-xl inline-block box-border h-[44px] text-white bg-accent-dark hover:bg-accent font-bold px-3 py-2 select-none touch-none */
+    }
+    .pill {
+        @apply bg-gray-80 border border-gray-70 inline-block hover:bg-gray-50 text-lg px-2 py-1 rounded-lg active:bg-gray-20
+    }
+    .pill-icon{
+        @apply text-xl text-teal-100 border border-teal-100 px-1.5 rounded-full
+    }
+    .multipill {
+        @apply rounded-e-lg rounded-s-none
     }
 }
